// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Like /> Rendering Should match snapshot - checked 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="like-btn"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 5,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={28.985507246376812}
      bbWidth={28.985507246376812}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 28.985507246376812,
            "width": 28.985507246376812,
          },
          Object {
            "flex": 0,
            "height": 28,
            "width": 28,
          },
        ]
      }
      vbHeight={16}
      vbWidth={16}
    >
      <RNSVGGroup>
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M0 0h16v16H0z"
          />
          <RNSVGPath
            d="M4.67 7.33v5.34c0 .36-.3.66-.67.66H2.67a.67.67 0 01-.67-.66V8c0-.37.3-.67.67-.67h2c1.47 0 2.66-1.2 2.66-2.66V4A1.33 1.33 0 0110 4v3.33h2c.74 0 1.33.6 1.33 1.34L12.67 12c-.2.84-.74 1.38-1.34 1.33H6.67a2 2 0 01-2-2"
            fill={4281698282}
            propList={
              Array [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4294967295}
            strokeLinecap={1}
            strokeLinejoin={1}
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        Object {
          "color": "#313131",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 23,
          "marginLeft": 5,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;

exports[`<Like /> Rendering Should match snapshot - unchecked 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="like-btn"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 5,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={28.985507246376812}
      bbWidth={28.985507246376812}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 28.985507246376812,
            "width": 28.985507246376812,
          },
          Object {
            "flex": 0,
            "height": 28,
            "width": 28,
          },
        ]
      }
      vbHeight={16}
      vbWidth={16}
    >
      <RNSVGGroup>
        <RNSVGGroup
          fill={null}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        >
          <RNSVGPath
            d="M0 0h16v16H0z"
          />
          <RNSVGPath
            d="M4.67 7.33v5.34c0 .36-.3.66-.67.66H2.67a.67.67 0 01-.67-.66V8c0-.37.3-.67.67-.67h2c1.47 0 2.66-1.2 2.66-2.66V4A1.33 1.33 0 0110 4v3.33h2c.74 0 1.33.6 1.33 1.34L12.67 12c-.2.84-.74 1.38-1.34 1.33H6.67a2 2 0 01-2-2"
            propList={
              Array [
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4281698282}
            strokeLinecap={1}
            strokeLinejoin={1}
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        Object {
          "color": "#313131",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 23,
          "marginLeft": 5,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;

exports[`<Like /> Rendering Should match snapshot - with custom size - unchecked 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="like-btn"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 5,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={39.85507246376812}
      bbWidth={39.85507246376812}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 39.85507246376812,
            "width": 39.85507246376812,
          },
          Object {
            "flex": 0,
            "height": 39,
            "width": 39,
          },
        ]
      }
      vbHeight={16}
      vbWidth={16}
    >
      <RNSVGGroup>
        <RNSVGGroup
          fill={null}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        >
          <RNSVGPath
            d="M0 0h16v16H0z"
          />
          <RNSVGPath
            d="M4.67 7.33v5.34c0 .36-.3.66-.67.66H2.67a.67.67 0 01-.67-.66V8c0-.37.3-.67.67-.67h2c1.47 0 2.66-1.2 2.66-2.66V4A1.33 1.33 0 0110 4v3.33h2c.74 0 1.33.6 1.33 1.34L12.67 12c-.2.84-.74 1.38-1.34 1.33H6.67a2 2 0 01-2-2"
            propList={
              Array [
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4281698282}
            strokeLinecap={1}
            strokeLinejoin={1}
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        Object {
          "color": "#313131",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 23,
          "marginLeft": 5,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;
